# kaptaitourist/src/main/java/com/kaptaitourist/kaptaitourist/core/routes/RouteNames.java
@@ -6,9 +6,13 @@ public class RouteNames {
     public static final String HOTEL = "/hotel";
     public static final String ROOM = "/room";
     public static final String FACILITY = "/facility";
+    public static final String BOOKING = "/booking";
+    public static final String AVAILABILITY = "/availability";
+    public static final String CANCEL = "/cancel";
     public static final String FIND_BY_IMAGE_ID = "/{imageId}";
     public static final String HOTEL_ID = "/{hotelId}";
     public static final String ROOM_ID = "/{roomId}";
     public static final String FACILITY_ID = "/{facilityId}";
+    public static final String BOOKING_ID = "/{bookingId}";
     public static final String SAVE = "/save";
 }
